--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "ejs": "^3.1.5",
+    "exceljs": "^4.2.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-session-sequelize": "^2.3.0",
